--- a/_config.yml
+++ b/_config.yml
@@ -78,7 +78,7 @@ JB :
   # Set 'provider' to the comment provider you want to use.
   # Set 'provider' to false to turn commenting off globally.
   #
-  # comments :
+  comments :
   #   provider : disqus
   #   disqus :
   #     short_name : jekyllbootstrap
